# embed_js

./: Cargo.toml  README.md
embed_js/: Cargo.toml
embed_js/src/: lib.rs
embed_js_build/: Cargo.toml
embed_js_build/src/: lib.rs
embed_js_common/: Cargo.toml
embed_js_common/src/: lib.rs
embed_js_derive/: Cargo.toml
embed_js_derive/src/: lib.rs
examples/callbacks/: Cargo.toml  build.rs  post_build.rs
examples/callbacks/src/: lib.rs
examples/simple/: Cargo.toml  Makefile.toml  README.md  post_build.rs
examples/simple/src/: lib.rs
examples/simple/subcrate/: Cargo.toml  build.rs
examples/simple/subcrate/src/: lib.rs
examples/strings/: Cargo.toml  Makefile.toml  post_build.rs
examples/strings/src/: lib.rs
