[workspace]
members = ["embed_js", "embed_js_common", "embed_js_build", "embed_js_derive", "examples/simple", "examples/simple/subcrate"]

[patch.crates-io]
embed_js = { path = "embed_js" }
embed_js_common = { path = "embed_js_common" }
embed_js_build = { path = "embed_js_build" }
embed_js_derive = { path = "embed_js_derive" }